style(guideline): fix drawer active state bug on small mobile phones

--- a/projects/guideline/src/assets/scss/_led.scss
+++ b/projects/guideline/src/assets/scss/_led.scss
@@ -32,6 +32,9 @@ header {
   top: 0;
   left: 0;
   right: 0;
+  height: size(68px);
+  box-sizing: border-box;
+  overflow: hidden;
 
   &.default {
     background: transparent;
